projects/nex.rpi/src/apps/nr-dashboard/live/production/glance-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: kube-system
      sectionName: nr.chezmoi.sh-websecure
  hostnames:
    - home.nr.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: glance
          port: 80
